[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/Display/background.png" type="Texture" id=1]
[ext_resource path="res://scripts/PauseButton.gd" type="Script" id=2]
[ext_resource path="res://assets/Buttons_Sliders/Pause.png" type="Texture" id=3]
[ext_resource path="res://assets/Gameplay/Basket.png" type="Texture" id=4]
[ext_resource path="res://scripts/BasketRow.gd" type="Script" id=5]
[ext_resource path="res://assets/Kana/Rock.png" type="Texture" id=6]
[ext_resource path="res://assets/Kana/Hiragana/K/Plain/Ka.png" type="Texture" id=7]
[ext_resource path="res://assets/Buttons_Sliders/Slider Fill.png" type="Texture" id=8]
[ext_resource path="res://scripts/KGameScreen.gd" type="Script" id=9]
[ext_resource path="res://assets/Kana/Kanaka_Font.tres" type="DynamicFontData" id=10]
[ext_resource path="res://assets/Pause/Resume.png" type="Texture" id=11]
[ext_resource path="res://assets/Buttons_Sliders/Exit.png" type="Texture" id=12]
[ext_resource path="res://assets/Pause/Shade.png" type="Texture" id=13]
[ext_resource path="res://scripts/LoseBlock.gd" type="Script" id=14]
[ext_resource path="res://assets/3-20-Additions/Fonts/Kanaka_v2.tres" type="DynamicFont" id=15]

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = ExtResource( 10 )

[sub_resource type="CapsuleShape2D" id=1]
radius = 20.0
height = 200.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 40, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 512, 5 )

[sub_resource type="CircleShape2D" id=5]
radius = 24.5967

[node name="Level01" type="Node2D"]
script = ExtResource( 9 )
next_scene_path = "res://scenes/GameOverSreen.tscn"

[node name="Background" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="."]
margin_right = 1024.0
margin_bottom = 96.0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="."]
margin_left = 460.0
margin_right = 585.0
margin_bottom = 105.0
custom_colors/font_color = Color( 0.694118, 0.380392, 0.133333, 1 )
custom_fonts/font = ExtResource( 15 )
text = "00:00
"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="KanaNext" type="TextureRect" parent="."]
margin_right = 89.0
margin_bottom = 88.0
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Kanalabel" type="Label" parent="KanaNext"]
margin_right = 90.0
margin_bottom = 92.0
custom_fonts/font = SubResource( 6 )
text = "A"
align = 1
valign = 1
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
cell_size = Vector2( 80, 48 )
collision_layer = 15
collision_mask = 15
format = 1

[node name="Basket" type="Area2D" parent="TileMap"]
position = Vector2( 520, 552 )
scale = Vector2( 0.302966, 0.327586 )
collision_layer = 4
collision_mask = 10
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="TileMap/Basket"]
scale = Vector2( 0.28, 0.36 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Basket"]
position = Vector2( 0, -6.60083 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="LeftBlock" type="Area2D" parent="TileMap"]
position = Vector2( 120, 552 )
collision_layer = 8
collision_mask = 6

[node name="Sprite" type="Sprite" parent="TileMap/LeftBlock"]
scale = Vector2( 1.25, 10 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/LeftBlock"]
shape = SubResource( 2 )

[node name="RightBlock" type="Area2D" parent="TileMap"]
position = Vector2( 920, 552 )
collision_layer = 8
collision_mask = 6

[node name="Sprite" type="Sprite" parent="TileMap/RightBlock"]
scale = Vector2( 1.25, 10 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/RightBlock"]
shape = SubResource( 3 )

[node name="LoseBlock" type="Area2D" parent="TileMap"]
position = Vector2( 520, 590 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 14 )
next_scene_path = "res://scenes/GameOverSreen.tscn"

[node name="Sprite" type="Sprite" parent="TileMap/LoseBlock"]
scale = Vector2( 16, 1 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/LoseBlock"]
shape = SubResource( 4 )

[node name="Testkanablock" type="KinematicBody2D" parent="TileMap"]
visible = false
position = Vector2( 520, 160 )
collision_layer = 2
collision_mask = 12

[node name="Sprite" type="Sprite" parent="TileMap/Testkanablock"]
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TileMap/Testkanablock"]
shape = SubResource( 5 )

[node name="PauseButton" type="Button" parent="."]
margin_left = 932.0
margin_right = 1022.0
margin_bottom = 77.0
icon = ExtResource( 3 )
flat = true
expand_icon = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
scene_path = "res://scenes/GameOverSreen.tscn"

[node name="BackButton" type="Button" parent="PauseButton"]
margin_left = -570.633
margin_top = 314.082
margin_right = -202.633
margin_bottom = 473.082
icon = ExtResource( 12 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseScreen" type="TextureRect" parent="PauseButton"]
margin_left = -565.755
margin_top = 157.0
margin_right = -252.755
margin_bottom = 309.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shade" type="TextureRect" parent="PauseButton"]
show_behind_parent = true
margin_left = -1357.83
margin_top = -195.424
margin_right = 562.167
margin_bottom = 884.576
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="body_entered" from="TileMap/Basket" to="." method="_on_Basket_body_entered"]
[connection signal="body_entered" from="TileMap/LoseBlock" to="." method="_on_LoseBlock_body_entered"]
[connection signal="pressed" from="PauseButton" to="PauseButton" method="_on_PauseButton_pressed"]
[connection signal="pressed" from="PauseButton/BackButton" to="." method="_on_BackButton_pressed"]
